Events time line alignment to bottom fixed

--- a/src/components/Events/events.scss
+++ b/src/components/Events/events.scss
@@ -54,6 +54,7 @@
   font-weight: bolder;
 
   &-header {
+    flex: 1;
     width: 100%;
     position: relative;
     isolation: isolate;
@@ -82,8 +83,8 @@
   }
 
   .details {
+    flex: 1;
     width: 100%;
-    height: 35px;
     color: var(--color-darkgray);
     font-size: var(--font-sizes-lg);
   }
